--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,17 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- Options to select -->
+    <string-array name="drug_info_options">
+        <item>Side effects</item>
+        <item>How to take it</item>
+        <item>Interactions</item>
+        <item>Purpose of use</item>
+        <item>Additional info</item>
+        <item>Contraindications</item>
+        <item>Pregnancy</item>
+        <item>Composition</item>
+        <item>Warnings</item>
+    </string-array>
 </resources>
