--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Pillai</string>
+    <string name="app_name">pillai</string>
+    <string name="app_slogan">Medical information, easy to swallow</string>
     <string name="title_activity_drug_info">DrugInfoActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -9,6 +10,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+
 
     <!-- Options to select -->
     <string-array name="drug_info_options">
